css/styles.css
/* ... */
.container {
  /*makes scrollbar not visable*/
  scrollbar-width: none; /* Firefox */
  -ms-overflow-style: none; /* Internet Explorer 10+ */
}

/*makes scrollbar not visable*/
.container::-webkit-scrollbar {
  /* WebKit */
  width: 0;
  height: 0;
}

.nav-info {
  display: flex;
  justify-content: space-between;
}

.nav-info a {
  text-decoration: none;
}

.home-nav-mob,
.left-nav-desk {
  font-size: 25px;
  font-weight: bolder;
  color: black;
  /* background-color: white;
  border: 3px solid black;
  padding: 0%; */
}

/* changes navigation elements style on scroll */
.nav-home-scrolled {
  color: #f5bf44;
}
.nav-about-scrolled {
  color: #93caac;
}
.nav-projects-scrolled {
  color: #ee7772;
}
.nav-contact-scrolled {
  color: #b196e1;
}

/* changes navigation elements style on hover */
#nav-home:hover {
  color: #f5bf44;
}
#nav-about:hover {
  color: #93caac;
}
#nav-projects:hover {
  color: #ee7772;
}
#nav-contact:hover {
  color: #b196e1;
}

.linkedInSVG:hover {
  fill: #b196e1;
}
.githubSVG:hover {
  fill: #ee7772;
}
.resumeSVG:hover {
  fill: #93caac;
}

section {
  display: flex;
  justify-content: center;
  align-items: center;
}

/* fade and scroll items into view while scrolling */
.fade-in {
  opacity: 0;
  transition: opacity 750ms ease-in;
}
.fade-in.appear {
  opacity: 1;
}

.hero-box-wrapper {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: row;
  padding: 4%;
  box-shadow: 12px 12px #f5bf44;
  background-color: white;
  border: 3px solid black;
  z-index: 2;
  border-radius: 30px;
}

.hero-box-wrapper:hover {
  transform: translate3d(0, -5px, 0);
}

/* waving hand emoji animation */

.hand-emoji {
  animation: waving-hand 2.5s infinite;
  transform-origin: 70% 70%;
  display: inline-block;
}
@keyframes waving-hand {
  0% {
    transform: rotate(0deg);
  }
  10% {
    transform: rotate(14deg);
  }
  20% {
    transform: rotate(-8deg);
  }
  30% {
    transform: rotate(14deg);
  }
  40% {
    transform: rotate(-4deg);
  }
  50% {
    transform: rotate(10deg);
  }
  60% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(0deg);
  }
}
/* Customizable typewriter css */

.hero-info h1 {
  color: #8298f5;
  position: relative;
  /* outline: 2px solid red; */
  width: max-content;
}
.hero-info h1::before,
.hero-info h1::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}

.hero-info h1::before {
  background: white;
  animation: typewriter 3s steps(10) 1s forwards;
}

.hero-info h1::after {
  width: 0.1em;
  background: #8298f5;
  animation: typewriter 3s steps(10) 1s forwards, blink 1s steps(10) infinite;
}

@keyframes typewriter {
  to {
    left: 100%;
  }
}

@keyframes blink {
  to {
    background: transparent;
    /* visibility: hidden; */
  }
}

.hero-info h2 {
  color: #fd6237;
  opacity: 0;
  animation: fadeIn 2s ease-in 4s forwards;
}

.hero-info p {
  opacity: 0;
  animation: fadeIn 2s ease-in 4s forwards;
}

@keyframes fadeIn {
  to {
    opacity: 1;
  }
}

.button-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}

/*Hire me button css and hover animation css*/
.btn-1 {
  width: 300px;
  height: 100px;
  background-color: white;
  box-shadow: 0 1.6rem 1.6rem rgba(51, 51, 51, 0.25);
  color: black;
  border: 3px solid black;
  border-radius: 30px;
  box-shadow: inset 0 0 0 0 black;
  transition: ease-out 0.3s;
  font-size: 35px;
  outline: none;
  display: flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  font-size: 40px;
  font-weight: bold;
  opacity: 0;
  animation: fadeIn 2s ease-in 5s forwards;
}

.btn-1:hover {
  box-shadow: inset 310px 0 0 0 black;
  cursor: pointer;
  color: white;
  text-decoration: none;
}

.about {
  /* margin: 10%; */
  text-align: center;
}

.about-grid {
  display: grid;
  /* gap: 1.5rem; */
  place-items: center;
  grid-auto-columns: 1fr;
}

.about-info {
  padding: 5%;
  background-color: white;
  border: 3px solid black;
  z-index: 2;
  box-shadow: 12px 12px #93caac;
  border-radius: 30px;
}

.about-info:hover {
  transform: translate3d(0, -5px, 0);
}

.pic {
  width: 420px;
  height: 420px;
  border-radius: 50%;
  background-color: white;
  border: 3px solid black;
  z-index: -1;
  box-shadow: 12px 12px #ee7772;
}

.pic:hover {
  transform: translate3d(0, -5px, 0);
}

.projects {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
.projects-title {
  font-size: 40px;
  font-weight: bolder;
  background-color: white;
  border: 3px solid black;
  border-radius: 30px;
  box-shadow: 12px 12px #8298f5;
  margin-bottom: 50px;
  padding: 20px;
}

.projects-title:hover {
  transform: translate3d(0, -5px, 0);
}

.projects-wrapper a {
  text-decoration: none;
  color: inherit !important;
  height: 425px;
  margin-left: 10px;
  margin-right: 10px;
  margin-bottom: 50px;
}

.projects-wrapper {
  max-width: 1150px;
  margin: 20px auto;
  height: auto;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;
}
.card_wrapper:hover {
  transform: translate3d(0, -5px, 0);
}

.card_wrapper {
  width: 350px;
  /* transition: transform 0.5s; */
  position: relative;
  height: 460px;
  background: #ffffff;
  display: flex;
  flex-direction: column;
  background-size: contain;
  background-repeat: no-repeat;
  border: 3px solid black;
  border-radius: 30px;
}

.projects-wrapper a:nth-child(1) .card_wrapper {
  background-image: url("../assets/mkrsunion.png");
  box-shadow: 12px 12px #f5bf44;
}
.projects-wrapper a:nth-child(2) .card_wrapper {
  background-image: url("../assets/Papercrane-1.png");
  background-size: 80%;
  background-position: top;
  box-shadow: 12px 12px #93caac;
}

.projects-wrapper a:nth-of-type(3) .card_wrapper {
  background-image: url("../assets/Alphabody-1.png");
  background-size: 80%;
  background-position: top;
  box-shadow: 12px 12px #ee7772;
}
/* ... */

